Fixed error box spacing for title location left

--- a/packages/survey-core/src/default-theme/blocks/sd-question.scss
+++ b/packages/survey-core/src/default-theme/blocks/sd-question.scss
@@ -51,10 +51,8 @@
   row-gap: var(--sjs2-spacing-x100);
 }
 
-// TODO: Remove as not working
 .sd-question--left {
   &>.sd-question__container {
-    row-gap: var(--sjs2-spacing-x100);
     &>.sd-question__header-and-content-container {
       flex-direction: row;
       flex-wrap: wrap;
@@ -71,6 +69,11 @@
 .sd-root--compact {
   .sd-question__header-and-content-container {
     padding: 0;
+  }
+  .sd-question--left {
+    &>.sd-question__container {
+      row-gap: var(--sjs2-spacing-x100);
+    }
   }
 }
 
